--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "driver-buddy",
+  "version": "1.0.0",
+  "description": "Student Carpooling App",
+  "scripts": {
+    "start": "node index.js",
+    "test": "jest",
+    "release": "standard-version",
+    "release:minor": "standard-version --release-as minor",
+    "release:major": "standard-version --release-as major"
+  },
   "lint-staged": {
     "*.{js,jsx}": [
       "eslint --fix",
@@ -12,5 +22,12 @@
     "*.test.js": [
       "npm test -- --findRelatedTests"
     ]
+  },
+  "devDependencies": {
+    "husky": "^9.0.0",
+    "lint-staged": "^13.0.0",
+    "@commitlint/cli": "^17.0.0",
+    "@commitlint/config-conventional": "^17.0.0",
+    "standard-version": "^9.0.0"
   }
 }
